0.2.0
Added: The pocket watch. With a pocket watch in your inventory, you can tell time accurately, no matter where you are! Craft a vanilla clock with some type of quartz to get one.
Added: Pocket watch displays an actual time next to the clock bar. It's a 24-hour clock by default but you can change it to a 12-hour clock (with AM/PM) if that's more your style. There's also a config to disable it entirely. The text is to the right of the clock bar normally, or to the left if the clock bar is anchored to the right of the screen (tldr: you won't need to tweak your clock bar's position)
Added: You can now see the clock bar whenever there's a vanilla clock in your inventory, but it will not display the exact time.

0.1.2
Added: Support for Morpheus (#7)
Fixed: Sleeping during extended periods not working (#7)

0.1.1
Added: The ability to shorten days/nights with negative extended periods (this advances time, so the sun/moon will jump ahead. I'm still working on a fix for sky rendering) (#4)
Fixed: Clock and actual time not syncing when playing on a dedicated server (#3)
Fixed: Removed some unneeded debug text (#5)

0.1.0
First alpha release! Extended time periods and clock HUD.