@@ -1,0 +1,9 @@
+public net.minecraft.client.renderer.RenderGlobal field_72771_w # glSkyList
+public net.minecraft.client.renderer.RenderGlobal field_72781_x # glSkyList2
+public net.minecraft.client.renderer.RenderGlobal field_110927_h # MOON_PHASES_TEXTURES
+public net.minecraft.client.renderer.RenderGlobal field_175011_u # sky2VBO
+public net.minecraft.client.renderer.RenderGlobal field_175012_t # skyVBO
+public net.minecraft.client.renderer.RenderGlobal field_72772_v # starGLCallList
+public net.minecraft.client.renderer.RenderGlobal field_175013_s # starVBO
+public net.minecraft.client.renderer.RenderGlobal field_110928_i # SUN_TEXTURES
+public net.minecraft.client.renderer.RenderGlobal field_175005_X # vboEnabled
